--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,6 +31,7 @@
 	    <service android:name=".service.CustomNotifierService"></service>
         
 	    <receiver android:name=".service.AlarmBroadcastReceiver"></receiver>
+	    <activity android:name=".NoticeDetailsActivity" android:label="Notice Details"></activity>
     </application>
 
 </manifest>
